[gd_scene load_steps=16 format=3 uid="uid://fktce8tbderh"]

[ext_resource type="Script" path="res://mobs/sleepless.gd" id="1_ldm3s"]
[ext_resource type="Texture2D" uid="uid://cm0kduah721r8" path="res://Sprites/SleeplessWalkingLeft.png" id="2_4ou22"]
[ext_resource type="Texture2D" uid="uid://f5lpniumwr3c" path="res://Sprites/SpritesUI/MobHealthbar.png" id="2_b00wq"]
[ext_resource type="Script" path="res://Health.gd" id="2_gcs7s"]
[ext_resource type="Script" path="res://Hurtbox.gd" id="3_bnr8s"]
[ext_resource type="Texture2D" uid="uid://pj1oosto1xyc" path="res://Sprites/SpritesUI/MobHealthbarProgress.png" id="3_n3qj7"]
[ext_resource type="Texture2D" uid="uid://cgpsy4xcdvalb" path="res://Sprites/SpritesUI/MobPreviousHealthbar.png" id="4_gct10"]
[ext_resource type="Script" path="res://Hitbox.gd" id="5_kf8ye"]

[sub_resource type="Animation" id="Animation_u6kp5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sleepless:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_4ou22")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sleepless:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sleepless:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sleepless:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sleepless:flip_h")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Hitbox/HitboxCollision:build_mode")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Hitbox/HitboxCollision:polygon")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(0, -24, 1, -25, 3, -25, 4, -24, 6, -22, 8, -22, 8, -20, 7, -19, 3, -17, 1, -17, 0, -18)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Hurtbox/HurtboxCollision:build_mode")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Hurtbox/HurtboxCollision:polygon")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(15, -28, 13, -28, 13, -29, 12, -29, 12, -30, 11, -30, 11, -31, 10, -31, 10, -32, 9, -32, 9, -34, 8, -34, 8, -40, 9, -40, 9, -42, 10, -42, 10, -43, 11, -43, 11, -44, 12, -44, 12, -45, 13, -45, 13, -46, 21, -46, 21, -45, 23, -45, 23, -44, 25, -44, 25, -43, 27, -43, 27, -42, 28, -42, 28, -41, 29, -41, 29, -39, 30, -39, 30, -36, 29, -36, 29, -34, 28, -34, 28, -32, 27, -32, 27, -31, 26, -31, 26, -30, 25, -30, 25, -29, 24, -29, 24, -28, 22, -28, 22, -27, 19, -27, 19, -26, 22, -26, 22, -25, 23, -25, 23, -24, 24, -24, 24, -23, 25, -23, 25, -18, 24, -18, 24, -14, 23, -14, 23, -11, 22, -11, 22, -7, 21, -7, 21, -3, 20, -3, 20, -1, 19, -1, 19, 0, 14, 0, 14, -1, 10, -1, 10, -2, 11, -2, 11, -3, 13, -3, 13, -5, 12, -5, 12, -13, 11, -13, 11, -16, 9, -16, 9, -18, 10, -18, 10, -19, 11, -19, 11, -21, 9, -21, 9, -20, 7, -20, 7, -19, 4, -19, 4, -18, 3, -18, 3, -17, 1, -17, 1, -18, 0, -18, 0, -24, 1, -24, 1, -25, 3, -25, 3, -24, 4, -24, 4, -22, 6, -22, 6, -23, 7, -23, 7, -24, 9, -24, 9, -25, 12, -25, 12, -26, 14, -26, 14, -27, 15, -27)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Hitbox/HitboxCollision2:polygon")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(9, -18, 12, -19, 12, -16, 9, -16)]
}

[sub_resource type="Animation" id="Animation_27prc"]
resource_name = "WalkingLeft"
step = 0.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sleepless:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_4ou22")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sleepless:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sleepless:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sleepless:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sleepless:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_q4hqp"]
resource_name = "WalkingRight"
step = 0.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sleepless:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_4ou22")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sleepless:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sleepless:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sleepless:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sleepless:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w1c6b"]
_data = {
"RESET": SubResource("Animation_u6kp5"),
"WalkingLeft": SubResource("Animation_27prc"),
"WalkingRight": SubResource("Animation_q4hqp")
}

[sub_resource type="Animation" id="Animation_bn6oa"]
resource_name = "Hurt"
length = 0.5
step = 0.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sleepless:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_8uusv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sleepless:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_65rq7"]
_data = {
"Hurt": SubResource("Animation_bn6oa"),
"RESET": SubResource("Animation_8uusv")
}

[node name="Sleepless" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
platform_floor_layers = 4294967040
script = ExtResource("1_ldm3s")
damage = 11

[node name="MobHealthBar" type="TextureProgressBar" parent="."]
z_index = 1
y_sort_enabled = true
offset_top = -53.0
offset_right = 30.0
offset_bottom = -48.0
size_flags_horizontal = 4
value = 20.0
texture_progress = ExtResource("3_n3qj7")
texture_progress_offset = Vector2(1, 1)

[node name="MobSecondaryHealthBar" type="TextureProgressBar" parent="MobHealthBar"]
z_index = -1
layout_mode = 0
offset_right = 4.0
offset_bottom = 27.0
value = 20.0
texture_under = ExtResource("2_b00wq")
texture_progress = ExtResource("4_gct10")
texture_progress_offset = Vector2(1, 1)

[node name="Health" type="Node" parent="."]
script = ExtResource("2_gcs7s")
max_health = 10
current_health = 10

[node name="Sleepless" type="Sprite2D" parent="."]
position = Vector2(15, -23)
texture = ExtResource("2_4ou22")
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_w1c6b")
}

[node name="HurtAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_65rq7")
}

[node name="Hurtbox" type="Area2D" parent="." node_paths=PackedStringArray("health")]
visible = false
y_sort_enabled = true
collision_layer = 4
collision_mask = 0
script = ExtResource("3_bnr8s")
health = NodePath("../Health")

[node name="HurtboxCollision" type="CollisionPolygon2D" parent="Hurtbox"]
build_mode = 1
polygon = PackedVector2Array(15, -28, 13, -28, 13, -29, 12, -29, 12, -30, 11, -30, 11, -31, 10, -31, 10, -32, 9, -32, 9, -34, 8, -34, 8, -40, 9, -40, 9, -42, 10, -42, 10, -43, 11, -43, 11, -44, 12, -44, 12, -45, 13, -45, 13, -46, 21, -46, 21, -45, 23, -45, 23, -44, 25, -44, 25, -43, 27, -43, 27, -42, 28, -42, 28, -41, 29, -41, 29, -39, 30, -39, 30, -36, 29, -36, 29, -34, 28, -34, 28, -32, 27, -32, 27, -31, 26, -31, 26, -30, 25, -30, 25, -29, 24, -29, 24, -28, 22, -28, 22, -27, 19, -27, 19, -26, 22, -26, 22, -25, 23, -25, 23, -24, 24, -24, 24, -23, 25, -23, 25, -18, 24, -18, 24, -14, 23, -14, 23, -11, 22, -11, 22, -7, 21, -7, 21, -3, 20, -3, 20, -1, 19, -1, 19, 0, 14, 0, 14, -1, 10, -1, 10, -2, 11, -2, 11, -3, 13, -3, 13, -5, 12, -5, 12, -13, 11, -13, 11, -16, 9, -16, 9, -18, 10, -18, 10, -19, 11, -19, 11, -21, 9, -21, 9, -20, 7, -20, 7, -19, 4, -19, 4, -18, 3, -18, 3, -17, 1, -17, 1, -18, 0, -18, 0, -24, 1, -24, 1, -25, 3, -25, 3, -24, 4, -24, 4, -22, 6, -22, 6, -23, 7, -23, 7, -24, 9, -24, 9, -25, 12, -25, 12, -26, 14, -26, 14, -27, 15, -27)

[node name="Hitbox" type="Area2D" parent="."]
visible = false
y_sort_enabled = true
collision_layer = 0
collision_mask = 16
script = ExtResource("5_kf8ye")

[node name="HitboxCollision" type="CollisionPolygon2D" parent="Hitbox"]
polygon = PackedVector2Array(0, -24, 1, -25, 3, -25, 4, -24, 6, -22, 8, -22, 8, -20, 7, -19, 3, -17, 1, -17, 0, -18)

[node name="HitboxCollision2" type="CollisionPolygon2D" parent="Hitbox"]
polygon = PackedVector2Array(9, -18, 12, -19, 12, -16, 9, -16)

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2(15, -4)
polygon = PackedVector2Array(-4, -12, -5, 3, -1, 4, 4, 4, 6, 1, 9, -10, 9, -12)

[connection signal="health_depleted" from="Health" to="." method="_on_health_health_depleted"]
[connection signal="received_damage" from="Hurtbox" to="Health" method="_on_hurtbox_received_damage"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
